--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
-    android:background="@drawable/sight">
+    android:background="@drawable/classroom">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,7 +22,7 @@
             android:weightSum="1">
 
             <Button
-                android:layout_width="219dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/input_button"
                 android:id="@+id/input_button"
@@ -30,7 +30,8 @@
                 android:background="@drawable/buttonz"
                 android:elegantTextHeight="false"
                 android:enabled="true"
-                android:focusableInTouchMode="false" />
+                android:focusableInTouchMode="false"
+                android:textStyle="bold|normal" />
         </TableRow>
 
         <TableRow
@@ -39,7 +40,7 @@
             android:weightSum="1">
 
             <Button
-                android:layout_width="219dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/flash_button"
                 android:id="@+id/flashcard_button"
@@ -48,7 +49,8 @@
                 android:background="@drawable/buttonz"
                 android:elegantTextHeight="false"
                 android:enabled="true"
-                android:focusableInTouchMode="false" />
+                android:focusableInTouchMode="false"
+                android:textStyle="bold|normal" />
         </TableRow>
 
         <TableRow
@@ -57,7 +59,7 @@
             android:weightSum="1">
 
             <Button
-                android:layout_width="219dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/writing_button"
                 android:id="@+id/writing_button"
@@ -65,7 +67,8 @@
                 android:background="@drawable/buttonz"
                 android:elegantTextHeight="false"
                 android:enabled="true"
-                android:focusableInTouchMode="false" />
+                android:focusableInTouchMode="false"
+                android:textStyle="bold|normal" />
         </TableRow>
 
         <TableRow
@@ -74,7 +77,7 @@
             android:weightSum="1">
 
             <Button
-                android:layout_width="219dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/quiz_button"
                 android:id="@+id/quiz_button"
@@ -83,7 +86,8 @@
                 android:background="@drawable/buttonz"
                 android:elegantTextHeight="false"
                 android:enabled="true"
-                android:focusableInTouchMode="false" />
+                android:focusableInTouchMode="false"
+                android:textStyle="bold|normal" />
         </TableRow>
 
     </LinearLayout>
@@ -99,8 +103,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:background="@drawable/abc_textfield_search_activated_mtrl_alpha"
+        android:background="#c81d1c19"
         android:textAllCaps="false"
         android:textAlignment="center"
-        android:gravity="left" />
+        android:gravity="center"
+        android:textColor="#ffffffff"
+        android:autoText="true" />
 </RelativeLayout>
