--- a/app/src/main/res/layout/flashcards.xml
+++ b/app/src/main/res/layout/flashcards.xml
@@ -38,18 +38,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/back"
-        android:layout_alignParentTop="true"
+        android:background="@drawable/back"
+        android:layout_below="@+id/progressBar"
         android:layout_alignParentStart="true"
-        android:background="@drawable/back" />
+        android:text="@string/back" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next"
+        android:background="@drawable/next"
         android:layout_below="@+id/textView"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="45dp"
-        android:background="@drawable/next" />
+        android:text="@string/next" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -60,5 +61,13 @@
         android:layout_alignTop="@+id/progressBar"
         android:layout_alignBottom="@+id/progressBar"
         android:layout_alignParentEnd="true" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar3"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/next" />
 
 </RelativeLayout>
