--- a/app/src/main/res/layout/quizlayout.xml
+++ b/app/src/main/res/layout/quizlayout.xml
@@ -67,56 +67,68 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/next"
+        android:layout_alignParentEnd="true">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
+        <RadioGroup
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-            <RadioButton
-                android:layout_width="303dp"
-                android:layout_height="70dp"
-                android:text="@string/answer"
-                android:id="@+id/radioButton"
-                android:background="#90f9f9f9"
-                android:checked="false" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:background="#c3666666">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView2"
-                android:background="@android:drawable/ic_media_play"
-                android:contentDescription="@string/playbutton"
-                android:layout_below="@+id/textView"
-                android:layout_alignParentEnd="true"
-                android:layout_weight="1.71" />
-        </TableRow>
+                <RadioButton
+                    android:layout_width="275dp"
+                    android:layout_height="70dp"
+                    android:text="@string/answer"
+                    android:id="@+id/option1"
+                    android:background="#90f9f9f9"
+                    android:checked="false"
+                    android:clickable="true"
+                    android:enabled="true" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView2"
+                    android:background="@android:drawable/ic_media_play"
+                    android:contentDescription="@string/playbutton"
+                    android:layout_alignParentEnd="true"
+                    android:layout_weight="1.71" />
+            </TableRow>
 
-            <RadioButton
-                android:layout_width="304dp"
-                android:layout_height="70dp"
-                android:text="@string/answer"
-                android:id="@+id/radioButton2"
-                android:background="#97ffffff"
-                android:checked="false" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:background="#c3666666">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView3"
-                android:background="@android:drawable/ic_media_play"
-                android:contentDescription="@string/playbutton"
-                android:layout_below="@+id/textView"
-                android:layout_alignParentEnd="true"
-                android:layout_weight="1.71" />
+                <RadioButton
+                    android:layout_width="275dp"
+                    android:layout_height="70dp"
+                    android:text="@string/answer"
+                    android:id="@+id/option2"
+                    android:background="#97ffffff"
+                    android:checked="false"
+                    android:enabled="true"
+                    android:clickable="true" />
 
-        </TableRow>
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView3"
+                    android:background="@android:drawable/ic_media_play"
+                    android:contentDescription="@string/playbutton"
+                    android:layout_below="@+id/textView"
+                    android:layout_alignParentEnd="true"
+                    android:layout_weight="1.71" />
+
+            </TableRow>
+        </RadioGroup>
     </LinearLayout>
 
     <ImageView
