--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/titlename"
-        android:id="@+id/textView"
+        android:id="@+id/question"
         android:textStyle="bold|italic"
         android:textSize="85dp"
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
