--- a/app/src/main/res/layout/flashcards.xml
+++ b/app/src/main/res/layout/flashcards.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/flashcard_sightword"
-        android:id="@+id/textView"
+        android:id="@+id/question"
         android:textStyle="bold|italic"
         android:textSize="60sp"
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/textView"
+        android:layout_alignEnd="@+id/question"
         android:layout_alignParentEnd="true"
         android:progressBackgroundTint="@color/abc_primary_text_disable_only_material_dark" />
 
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/next"
         android:background="@drawable/next"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/question"
         android:layout_alignParentEnd="true"
         android:text="@string/next" />
 
