--- a/app/src/main/res/layout/flashcards.xml
+++ b/app/src/main/res/layout/flashcards.xml
@@ -37,7 +37,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/back"
+        android:id="@+id/home"
         android:background="@drawable/back"
         android:layout_below="@+id/progressBar"
         android:layout_alignParentStart="true"
