--- a/app/src/main/res/layout/quizlayout.xml
+++ b/app/src/main/res/layout/quizlayout.xml
@@ -5,100 +5,103 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
     android:background="@drawable/classroom"
-    android:gravity="clip_horizontal">
+    android:gravity="clip_horizontal"
+    style="@android:style/Theme.NoTitleBar">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/question"
         android:id="@+id/question"
         android:textStyle="bold|italic"
         android:textSize="60sp"
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:background="@drawable/blackboard"
         android:textAllCaps="false"
         android:textAlignment="center"
         android:textColor="#ffffffff"
-        android:gravity="center"
-        android:layout_below="@+id/back" />
-
-    <ProgressBar
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/question"
+        android:layout_below="@+id/home"
         android:layout_alignParentEnd="true"
-        android:progressBackgroundTint="@color/abc_primary_text_disable_only_material_dark" />
+        android:contentDescription="question"
+        android:background="@drawable/kidsboard"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:singleLine="true"
+        android:paddingTop="60dp"
+        android:focusable="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/back"
-        android:background="@drawable/back"
-        android:text="@string/back"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/home"
+        android:background="@drawable/home"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentEnd="false" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next"
-        android:background="@drawable/next"
-        android:text="@string/next"
+        android:background="@drawable/nextt"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignEnd="@+id/question_play" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="false"
+        android:background="@drawable/backk" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="195dp"
         android:layout_below="@+id/question"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/next"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:id="@+id/linearLayout2">
 
         <RadioGroup
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="195dp">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="1"
                 android:background="#c3666666">
 
                 <RadioButton
                     android:layout_width="275dp"
-                    android:layout_height="70dp"
+                    android:layout_height="80dp"
                     android:text="@string/answer"
                     android:id="@+id/option1"
                     android:background="#90f9f9f9"
                     android:checked="false"
                     android:clickable="true"
-                    android:enabled="true" />
+                    android:enabled="true"
+                    android:elegantTextHeight="false" />
 
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:id="@+id/imageView2"
-                    android:background="@android:drawable/ic_media_play"
                     android:contentDescription="@string/playbutton"
                     android:layout_alignParentEnd="true"
-                    android:layout_weight="1.71" />
+                    android:layout_weight="1.71"
+                    android:src="@android:drawable/ic_media_play" />
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="1"
                 android:background="#c3666666">
 
                 <RadioButton
                     android:layout_width="275dp"
-                    android:layout_height="70dp"
+                    android:layout_height="80dp"
                     android:text="@string/answer"
                     android:id="@+id/option2"
                     android:background="#97ffffff"
@@ -110,27 +113,26 @@
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:id="@+id/imageView3"
-                    android:background="@android:drawable/ic_media_play"
                     android:contentDescription="@string/playbutton"
                     android:layout_below="@+id/question"
                     android:layout_alignParentEnd="true"
-                    android:layout_weight="1.71" />
+                    android:layout_weight="1.71"
+                    android:src="@android:drawable/ic_media_play" />
 
             </TableRow>
         </RadioGroup>
     </LinearLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:background="@android:drawable/ic_media_play"
+        android:layout_width="80dp"
+        android:layout_height= "80dp"
+        android:id="@+id/question_play"
         android:contentDescription="@string/playbutton"
-        android:layout_weight="1.71"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/progressBar"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentEnd="true"
-        android:adjustViewBounds="false" />
+        android:adjustViewBounds="false"
+        android:src="@android:drawable/ic_media_play"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_alignEnd="@+id/question"
+        android:layout_alignParentStart="false" />
+
 
 </RelativeLayout>
